--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.FinanceApplication" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.FinanceApplication" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:windowBackground">@color/splash_background</item>
+    </style>
+
+    <style name="Theme.FinanceApplication.Splash" parent="Theme.FinanceApplication">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
 </resources>
